--- a/roles/common/add_packages/tasks/main.yml
+++ b/roles/common/add_packages/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: Check if a reboot is needed for Debian and Ubuntu boxes
   register: reboot_required_file
-  stat: path=/var/run/reboot-required get_md5=no
+  stat: path=/var/run/reboot-required get_checksum=no
 
 - name: Reboot the Debian or Ubuntu server
   reboot:
